minio/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Minio
    gethomepage.dev/description: S3 Compatible Object Store
    gethomepage.dev/icon: "sh-minio"

spec:
  rules:
  - host: minio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-web
            port:
              name: http
